--- a/templates/base.html
+++ b/templates/base.html
@@ -68,11 +68,75 @@
         ></script>
         <script
             type="text/javascript"
-          src="{% static 'js/file3.js' %}"
+            src="{% static 'js/file3.js' %}"
         ></script>
         <script
             type="text/javascript"
-          src="{% static 'js/file4.js' %}"
+            src="{% static 'js/file4.js' %}"
         ></script>
     </body>
+    <style>
+        .form-control {
+            background-color: #e4e1ee;
+            border-color: #000000;
+            color: #334e6e;
+            font-size: 16px;
+            font-weight: inherit;
+            height: 40px;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+            border-bottom-left-radius: 8px;
+            border-bottom-right-radius: 8px;
+            border-left-width: 0px;
+            border-right-width: 0px;
+            border-top-width: 0px;
+            border-bottom-width: 0px;
+            border-style: none;
+            padding-left: 12px;
+            padding-right: 12px;
+            box-shadow: none;
+            outline: none;
+        }
+        .btn-primary {
+            font-weight: 700;
+            font-style: normal;
+            font-size: 16px;
+            letter-spacing: 0px;
+            padding-left: 12px;
+            padding-right: 12px;
+            padding-top: 12px;
+            padding-bottom: 12px;
+            color: #ffffff;
+            background: #1f0b6c;
+            border-color: #000000;
+            box-shadow: 0 8px 24px 0 rgb(31 11 108 / 25%);
+            border-style: none;
+            border-top-left-radius: 12px;
+            border-top-right-radius: 12px;
+            border-bottom-left-radius: 12px;
+            border-bottom-right-radius: 12px;
+            border-left-width: 0px;
+            border-right-width: 0px;
+            border-top-width: 0px;
+            border-bottom-width: 0px;
+        }
+        .card {
+            padding-top: 24px;
+            padding-left: 24px;
+            padding-right: 24px;
+            padding-bottom: 24px;
+            border-color: #000000;
+            background: #ffffff;
+            border-top-left-radius: 16px;
+            border-top-right-radius: 16px;
+            border-bottom-left-radius: 16px;
+            border-bottom-right-radius: 16px;
+            border-left-width: 0px;
+            border-right-width: 0px;
+            border-top-width: 0px;
+            border-bottom-width: 0px;
+            border-style: none;
+            box-shadow: 0 16px 24px 0 rgb(0 0 0 / 8%);
+        }
+    </style>
 </html>
