added about us page

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -182,7 +182,7 @@
                                                     component-navbar-nav-link
                                                     component-navbar-nav-link__navbar-public
                                                 "
-                                                href="/about"
+                                                href="{% url 'about' %}"
                                                 ><i
                                                     class="
                                                         navbar-icon
