--- a/templates/base.html
+++ b/templates/base.html
@@ -138,5 +138,15 @@
             border-style: none;
             box-shadow: 0 16px 24px 0 rgb(0 0 0 / 8%);
         }
+        .body {
+            color: #334e6e;
+            background-color: #334e6e;
+            font-family: Barlow;
+            font-size: 16px;
+            line-height: 24px;
+            letter-spacing: 0px;
+            font-weight: 400;
+            font-style: normal;
+        }
     </style>
 </html>
