services page created

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -86,7 +86,7 @@
                                                     component-navbar-nav-link
                                                     component-navbar-nav-link__navbar-public
                                                 "
-                                                href="/services"
+                                                href="{% url 'services' %}"
                                                 ><i
                                                     class="
                                                         navbar-icon
