--- a/authapp/templates/register.html
+++ b/authapp/templates/register.html
@@ -18,7 +18,7 @@
                                 <div class="component_card">
                                     <div class="card">
                                         <form
-                                            action=""
+                                            action="{% url 'register' %}"
                                             method="post"
                                             class="
                                                 component_form_group
@@ -36,8 +36,9 @@
                                                         type="text"
                                                         class="form-control"
                                                         id="username"
+                                                        required
                                                         value=""
-                                                        name="RegistrationForm[login]"
+                                                        name="username"
                                                     />
                                                 </div>
                                                 <div class="form-group">
@@ -50,8 +51,9 @@
                                                         type="text"
                                                         class="form-control"
                                                         id="firstname"
+                                                        required
                                                         value=""
-                                                        name="RegistrationForm[first_name]"
+                                                        name="first_name"
                                                     />
                                                 </div>
                                                 <div class="form-group">
@@ -65,7 +67,8 @@
                                                         class="form-control"
                                                         id="lastname"
                                                         value=""
-                                                        name="RegistrationForm[last_name]"
+                                                        required
+                                                        name="last_name"
                                                     />
                                                 </div>
                                                 <div class="form-group">
@@ -79,7 +82,8 @@
                                                         class="form-control"
                                                         id="email"
                                                         value=""
-                                                        name="RegistrationForm[email]"
+                                                        required
+                                                        name="email"
                                                     />
                                                 </div>
                                                 <div class="form-group">
@@ -92,8 +96,9 @@
                                                         type="text"
                                                         class="form-control"
                                                         id="skype"
+                                                        required
                                                         value=""
-                                                        name="RegistrationForm[skype]"
+                                                        name="phone"
                                                     />
                                                 </div>
                                                 <div class="form-group">
@@ -106,7 +111,8 @@
                                                         type="password"
                                                         class="form-control"
                                                         id="password"
-                                                        name="RegistrationForm[password]"
+                                                        name="password1"
+                                                        required
                                                     />
                                                 </div>
                                                 <div class="form-group">
@@ -119,7 +125,8 @@
                                                         type="password"
                                                         class="form-control"
                                                         id="confirm"
-                                                        name="RegistrationForm[password_again]"
+                                                        name="password_confirm"
+                                                        required
                                                     />
                                                 </div>
                                                 <!-- <div
