terms page link

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -153,12 +153,13 @@
                                                 component-navbar-public-nav-item
                                             "
                                         >
+                                        <!-- href="/start-your-own-buisness" -->
                                             <a
                                                 class="
                                                     component-navbar-nav-link
                                                     component-navbar-nav-link__navbar-public
                                                 "
-                                                href="/start-your-own-buisness"
+                                                href="{% url 'terms_page' %}"
                                                 ><i
                                                     class="
                                                         navbar-icon
