--- a/templates/base.html
+++ b/templates/base.html
@@ -63,14 +63,8 @@
     <body>
         {% block content %} {% endblock content %}
         <script type="text/javascript" src="/static/js/file1.js"></script>
-        <script
-            type="text/javascript"
-            src="{% static 'js/file3.js' %}"
-        ></script>
-        <script
-            type="text/javascript"
-            src="{% static 'js/file4.js' %}"
-        ></script>
+        <script type="text/javascript" src="/static/js/file2.js"></script>
+        <script type="text/javascript" src="/static/js/file3.js"></script>
     </body>
     <style>
         .form-control {
