--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -149,7 +149,7 @@
                                                                 class="
                                                                     block-signin__link
                                                                 "
-                                                                href="/signup"
+                                                                href="{% url 'register' %}"
                                                                 >Sign up</a
                                                             >
                                                         </div>
