--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div id="block_35">
     <div class="block-wrapper">
         <div class="component_navbar">
@@ -15,7 +16,7 @@
                                 <div class="component-navbar-logo">
                                     <a href="{% url 'home' %}">
                                         <img
-                                            src="https://cdn.mypanel.link/sl1v5i/omwktrjr2pkj9gi5.png"
+                                            src="{% static 'images/logopromotionamro.jpeg' %}"
                                             class="sidebar-block__top-logo"
                                             alt=""
                                             title=""
